backend/kubernetes/attend-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attend-db-deployment
spec:
  selector:
    matchLabels:
      app: attend-db
  template:
    metadata:
      labels:
        app: attend-db
    spec:
      containers:
        - name: attend-db
          image: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: attend-db-service
spec:
  selector:
    app: attend-db
  ports:
    - name: attend-db
      protocol: TCP
      port: 5432
      targetPort: 5432
