backend/kubernetes/attend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attend-deployment
spec:
  selector:
    matchLabels:
      app: attend
  template:
    metadata:
      labels:
        app: attend
    spec:
      containers:
        - name: attend
          image: shameek/events-attend-dev
---
apiVersion: v1
kind: Service
metadata:
  name: attend-service
spec:
  selector:
    app: attend
  ports:
    - name: attend
      protocol: TCP
      port: 3000
      targetPort: 3000
