backend/kubernetes/event-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-db-deployment
spec:
  selector:
    matchLabels:
      app: event-db
  template:
    metadata:
      labels:
        app: event-db
    spec:
      containers:
        - name: event-db
          image: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: event-db-service
spec:
  selector:
    app: event-db
  ports:
    - name: event-db
      protocol: TCP
      port: 5432
      targetPort: 5432
