backend/kubernetes/event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-deployment
spec:
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec:
      containers:
        - name: event
          image: shameek/events-event-dev
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
spec:
  selector:
    app: event
  ports:
    - name: event
      protocol: TCP
      port: 3000
      targetPort: 3000
