backend/kubernetes/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-deployment
spec:
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming
          # p - port for client
          # m - port for monitoring
          # hbi - at what interval server sends heartbeat to client
          # hbt - how long server waits for heartbeat response
          # hbf - after how many failed responses server closes the client connection
          # -SD - nats client debug output
          # -cid - cluster id (NATS_CLUSTER_ID env var for all deployments)
          args:
            [
              "-p",
              "4222",
              "-m",
              "8222",
              "-hbi",
              "5s",
              "-hbt",
              "5s",
              "-hbf",
              "2",
              "-SD",
              "-cid",
              "events",
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-service
spec:
  selector:
    app: nats
  ports:
    - name: nats
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: nats-monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
