backend/kubernetes/query-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-db-deployment
spec:
  selector:
    matchLabels:
      app: query-db
  template:
    metadata:
      labels:
        app: query-db
    spec:
      containers:
        - name: query-db
          image: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: query-db-service
spec:
  selector:
    app: query-db
  ports:
    - name: query-db
      protocol: TCP
      port: 5432
      targetPort: 5432
