backend/kubernetes/query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: shameek/events-query-dev
---
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 3000
      targetPort: 3000
